fix network select on mobile

--- a/src/styles/app.styl
+++ b/src/styles/app.styl
@@ -152,3 +152,19 @@ input, select, textarea
 
   .select-network .tm-select .tm-field-select-addon i
     font-size: 18px
+
+  .header .select-network
+    position absolute
+    top 8px
+    right 15px
+    padding 0
+    margin 0
+
+  .header .select-network select
+    height 28px !important
+    font-size 11px !important
+
+  .header .select-network .tm-select .tm-field-select-addon
+    height: 27px;
+    width: 27px;
+    line-height: 27px;
